feat: update live data endpoint for managed symbols to improve data retrieval

--- a/docker/services/frontend/html/config-data.html
+++ b/docker/services/frontend/html/config-data.html
@@ -2177,7 +2177,7 @@
             document.getElementById('live-data-modal').classList.add('active');
 
             try {
-                const response = await fetch(`${API_BASE}/managed-symbols/${encodeURIComponent(symbol)}/live-data`);
+                const response = await fetch(`${API_BASE}/managed-symbols/live-data/${encodeURIComponent(symbol)}`);
                 if (!response.ok) {
                     throw new Error(`HTTP ${response.status}`);
                 }
