--- a/docker/services/frontend/html/index.html
+++ b/docker/services/frontend/html/index.html
@@ -87,6 +87,9 @@
             padding: 1.5rem;
             border: 1px solid rgba(255, 255, 255, 0.1);
             transition: all 0.3s;
+            display: flex;
+            flex-direction: column;
+            min-height: 280px;
         }
 
         .service-card:hover {
@@ -140,6 +143,7 @@
             font-size: 0.9rem;
             line-height: 1.5;
             margin-bottom: 1rem;
+            flex-grow: 1;
         }
 
         .service-info {
@@ -148,6 +152,8 @@
             padding: 0.8rem;
             margin-bottom: 1rem;
             font-size: 0.8rem;
+            flex-shrink: 0;
+            margin-top: auto;
         }
 
         .service-info div {
@@ -169,6 +175,7 @@
             display: flex;
             gap: 0.4rem;
             flex-wrap: nowrap;
+            flex-shrink: 0;
         }
 
         .service-links a {
